# netninja

./: Cargo.toml  README.md  install.sh
.github/: FUNDING.yml
docs/: CONTRIBUTING.md
lib/: helpers.sh  install.sh
src/: cli.rs  main.rs  monitor.rs  network.rs  security.rs  tmux.rs
