[package]
name = "netninja-cli"
version = "1.0.0"
edition = "2021"
authors = ["NetNinja Contributors"]
description = "A comprehensive CLI tool for Linux network troubleshooting with tmux multiplexer"

[[bin]]
name = "netninja-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket"] }
pnet = "0.35"
crossterm = "0.28"
